guestbook/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: guestbook-ingress
  namespace: guestbook
spec:
  ingressClassName: nginx
  rules:
  - host: guestbook.fmownspace.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - guestbook.fmownspace.com
    secretName: guestbook-tls
